--- a/app/src/main/res/layout/activity_filtros.xml
+++ b/app/src/main/res/layout/activity_filtros.xml
@@ -33,7 +33,7 @@
             android:textStyle="bold"/>
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/editPalavraChave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
